# museek-plus

./: CHANGELOG  CMakeLists.txt  CREDITS  FILES  INSTALL  INSTALL.md  INSTALL.scons  INSTRUCTIONS  LICENSE  README  README.md  SConstruct  TODO  build  build-debug  build-museeq  build-museeq-deb  build-no-museeq  build-release  clean  config.h.cmake  defaults.py  install  install-temp-museeq-deb  museekd.rc  museeq.desktop  musetup-gtk.desktop  python-site-packages.py  sdist  system.h.cmake  version.h
Mucipher/: CMakeLists.txt  SConscript  aes.c  aes.cpp  hexdigest.c  hexdigest.cpp  md5.c  md5.cpp  mucipher.h  mucipher.i  sha.c  sha.cpp  sha.h  sha256.c  sha256.cpp  wraphelp.c  wraphelp.cpp
Mucipher/PyMucipher/: CMakeLists.txt  mucipher.i  setup.py
Mucipher/perl/: SConscript
Mucipher/python/: SConscript  mucipherc.py
Muhelp/: CMakeLists.txt  Codec.cc  Codec.hh  DirEntry.cc  DirEntry.hh  Muconf.cc  Muconf.hh  Mulog.cc  Mulog.hh  SConscript  string_ext.hh
Museek/: BaseConnection.cc  BaseConnection.hh  CMakeLists.txt  DistribConnection.cc  DistribConnection.hh  DistribManager.cc  DistribManager.hh  DistribMessages.hh  InitMessages.hh  MessageConnection.cc  MessageConnection.hh  Messages.cc  Messages.hh  Museek.cc  Museek.hh  PeerConnection.cc  PeerConnection.hh  PeerListener.cc  PeerListener.hh  PeerManager.cc  PeerManager.hh  PeerMessages.hh  Recoder.cc  Recoder.hh  SConscript  ServerConnection.cc  ServerConnection.hh  ServerMessages.hh  ShareBase.cc  ShareBase.hh  TransferConnection.cc  TransferConnection.hh  TransferManager.cc  TransferManager.hh  mu.hh
NewNet/: CMakeLists.txt  nnbaseptr.h  nnbuffer.cpp  nnbuffer.h  nnclientsocket.cpp  nnclientsocket.h  nnevent.h  nnfactorysocket.h  nnguardobject.h  nnlog.cpp  nnlog.h  nnobject.h  nnpath.cpp  nnpath.h  nnratelimiter.cpp  nnratelimiter.h  nnreactor.cpp  nnreactor.h  nnrefcounter.h  nnrefptr.h  nnserversocket.cpp  nnserversocket.h  nnsocket.h  nntcpclientsocket.cpp  nntcpclientsocket.h  nntcpfactorysocket.h  nntcpserversocket.cpp  nntcpserversocket.h  nnunixclientsocket.cpp  nnunixclientsocket.h  nnunixfactorysocket.h  nnunixserversocket.cpp  nnunixserversocket.h  nnweakrefptr.h  platform.h  util.h
PyMucipher/: CMakeLists.txt  PKG-INFO  aes.c  md5.c  mucipher.h  mucipher.i  mucipher.py  setup.py  sha.c  sha256.c  system.h  wraphelp.c
Tools/: CMakeLists.txt  SConscript  mp3.c  mp3.h  muscan.1  muscan.cc  muscand.1  muscand.cc  scandir.hh  scanner.cc  scanner.hh
moodriver/: AUTHORS  Makefile.am  NEWS  autogen.sh  configure.ac  moodriver.pc.in
moodriver/data/: Makefile.am
moodriver/example/: Makefile.am  moo.cc
moodriver/include/: Makefile.am
moodriver/include/moo/: types.hh  (+3 more)
moodriver/src/: Makefile.am  md5.cc  md5.hh  moo-driver.cc  moo-io.cc  moo-io.hh  moo-types-private.hh  mucipher-aes.c  mucipher-hexdigets.c  mucipher-md5.c  mucipher-sha.c  mucipher-sha256.c  mucipher-system.h  mucipher-wraphelp.c  util.cc  util.hh  xcommon.cc  xcommon.hh
mucous/: CHANGELOG  CHANGELOG.old  CMakeLists.txt  INSTALL  MAINTAINERS  MANIFEST  SConscript  mucous  mucous.1  mucous.dox  setup.cfg  setup.py  sitecustomize.py
mucous/pymucous/: ConfigParser.py  MucousAlerts.py  MucousChatRooms.py  MucousFormat.py  MucousHelp.py  MucousInput.py  MucousLists.py  MucousMuscan.py  MucousNetworking.py  MucousPopup.py  MucousPrivateChat.py  MucousRecommendations.py  MucousRoomsList.py  MucousSearch.py  MucousSetup.py  MucousShares.py  MucousTransfers.py  MucousUserInfo.py  SConscript  __init__.py  utils.py
murmur/: CHANGELOG  CMakeLists.txt  INSTALL  MAINTAINERS  Makefile  README  SConscript  encode_bitmaps.py  murmur  murmur.1  setup.cfg  setup.py  setup_inc.py
murmur/files/: murmur.desktop
murmur/images/: logo.xcf  murmur-96px.xcf  x.xcf  yellow.xcf
murmur/pymurmur/: SConscript  entrydialog.py  muscan.py  settings.py  utils.py
murmur/trayicon/: Makefile  Makefile.in  trayicon.c
muscan/: CMakeLists.txt  mp3.c  mp3.h  muscan.1  muscan.cc  muscand.1  muscand.cc  scandir.cc  scandir.hh  scanner.cc  scanner.hh
museekd/: Buddies.cc  Buddies.hh  CMakeLists.txt  IfaceConnection.cc  IfaceConnection.hh  IfaceMessages.hh  MuseekdTypes.hh  SConscript  codesetmanager.cpp  codesetmanager.h  config.xml.tmpl  configmanager.cpp  configmanager.h  direntry.cpp  direntry.h  distributedeventtable.h  distributedmessages.h  distributedsocket.cpp  distributedsocket.h  downloadmanager.cpp  downloadmanager.h  downloadsocket.cpp  downloadsocket.h  handshakemessages.h  handshakesocket.cpp  handshakesocket.h  ifaceeventtable.h  ifacemanager.cpp  ifacemanager.h  ifacemessages.h  ifacesocket.cpp  ifacesocket.h  main.cc  main.cpp  messageprocessor.cpp  messageprocessor.h  museekd.1  museekd.cc  museekd.cpp  museekd.h  (+29 more)
museeq/: CMakeLists.txt  INSTALL  SConscript  SConstruct  aclineedit.cpp  aclineedit.h  away.xcf  banlist.cpp  banlist.h  browser.cpp  browser.h  browsers.cpp  browsers.h  buddylist.cpp  buddylist.h  chatpanel.cpp  chatpanel.h  chatroom.cpp  chatroom.h  chatrooms.cpp  chatrooms.h  chattext.cpp  chattext.h  chatticker.cpp  chatticker.h  codeccombo.cpp  codeccombo.h  connect.cpp  connect.h  connectdlg.h  connectdlg.ui  connectdlg.ui.h  defaults.py  fontsandcolorsdialog.cpp  fontsandcolorsdialog.h  fontsandcolorsdlg.h  fontsandcolorsdlg.ui  fontsandcolorsdlg.ui.h  icon.xpm  iconlistbox.cpp  (+124 more)
museeq/default/: newicons.xcf  offline.xcf  refresh.xcf
museeq/mikelabo-silk/: README
museeq/mikelabo-tri/: README
museeq/translations/: museeq_de.ts  museeq_en.ts  museeq_es.ts  museeq_fr.ts  museeq_it.ts  museeq_nl.ts  museeq_pl.ts  museeq_pt_BR.ts  museeq_ro.ts  museeq_template.ts  qt_cs.ts  qt_fr.ts  qt_he.ts  qt_ja.ts  qt_nb.ts  qt_pt-br.ts  qt_ru.ts  qt_zh.ts
python-bindings/: CMakeLists.txt  SConscript
python-bindings/museek/: __init__.py  driver.py  messages.py
python-clients/: CMakeLists.txt  SConscript  mulog  mulog.1  museekchat  museekcontrol  museekcontrol.1  musirc.py  setup.py
setup/: CMakeLists.txt  SConscript  musetup  musetup-gtk  musetup-gtk.1  musetup-gtk.desktop  musetup-qt  musetup-qt.1  musetup.1  musetup.in  setup.py
(+88 files in other folders)
